# simview

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml
simulation/: box_wrong.json  cylinder_long_fall.json  helhest_drive.json  helhest_flat_ground.json  helhest_gradient.json  helhest_terrain_extreme.json  helhest_terrain_small.json  helhest_torque.json  joint.json  one_wheel_rotating.json  one_wheel_rotating2.json  one_wheel_throw.json  one_wheel_throw2.json  robot.json  sphere_ground.json  sphere_ground_heightmap.json  sphere_throw_gradient.json  three_wheels_curved_drive.json  three_wheels_rotating.json  three_wheels_stationary.json  three_wheels_straight_drive.json  three_wheels_torque.json  three_wheels_wild.json  two_wheels_rotating.json  two_wheels_stationary.json  two_wheels_straight_drive.json
simview/: __init__.py  __main__.py  launcher.py  model.py  scene.py  server.py  state.py  utils.py
simview.egg-info/: PKG-INFO  SOURCES.txt
simview/static/js/: SimView.js  config.js  main.js
simview/static/js/components/: AnimationController.js  BatchManager.js  InteractionControls.js  (+1 more)
simview/static/lib/: js-colormaps.js
simview/templates/: index.html
static/css/: controls.css
static/js/: SimView.js  config.js  main.js
static/js/components/: AnimationController.js  BatchManager.js  InteractionController.js  Scene.js
static/js/objects/: Body.js  FlatGround.js  Terrain.js  utils.js
static/js/ui/: BodyStateWindow.js  Controls.js  PlaybackControls.js  ScalarPlotter.js
static/js/utils/: WebSocket.js  WindowHandler.js
templates/: index.html
(+8 files in other folders)
